PIRATE-3215  Fix wrong font family swatch association on site title

--- a/css/widgets.less
+++ b/css/widgets.less
@@ -30,15 +30,6 @@
 }
 
 
-// -----------------------------
-// Company Name
-// -----------------------------
-
-
-.widget.companyname a {
-	font-family: @font-swatch8-font-family;
-}
-
 
 
 // -----------------------------
@@ -283,7 +274,7 @@ button.btn,
 	p {
 		color: @color-swatch4;
 		padding: 0;
-	}	
+	}
 	li {
 		border-bottom: darken(@color-swatch1,10%);
 		&:last-child {
